k8s/base/09-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: pet-adopt-dev
  labels:
    app: frontend
spec:
  replicas: 1 # 1 tane frontend podu çalışacak şuan için.
  selector:
   matchLabels:
    app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pet-adopt-frontend:latest
          imagePullPolicy: IfNotPresent
          ports: 
           - containerPort: 8080
           # env olarak VITE_API_URL'i config'ten okumayacağım çünkü build time için işe yaramaz.
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
