k8s/base/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: pet-adopt-dev
  labels:
    app: postgres
spec:
  clusterIP: None # headless service, postgres için olan statefulset podlarının ip adreslerini almak için headless service yaptım.
  selector:
      app: postgres # label'ı postgres olan podlara trafik yönlendirdim.
  ports:
    - name: postgres
      port: 5432 # cluster içinden erişim için port
      targetPort: 5432 # pod içindeki container port
