k8s/base/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pet-adopt-dev
  labels:
    app: backend
spec:
  type: ClusterIP # backend servisi için ClusterIP tipi seçtim. (Cluster içi erişim olacak.)
  selector:
    app: backend # label'ı backend olan podlara trafik yönlendirdim.
  ports:
    - name: http
      port: 5000 # cluster içinden erişim için port, servisin kend portu
      targetPort: 5000 # backend container'ının dinleyeceği port
# backend servisinin dışardan erişim olmayacak, cluster içi erişim olacak ClusterIP o yüzden.
