k8s/base/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: pet-adopt-dev
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
   - name: http
     port: 8080
     targetPort: 8080
