k8s/base/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-adopt-ingress
  namespace: pet-adopt-dev
spec:
  ingressClassName: traefik
  rules:
     - host: pet-adopt.local
       http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
